--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -47,7 +47,7 @@
     {% set storeType = data['storetype'] %}
       <tr class="govuk-table__row">
         <th scope="row" class="govuk-table__header">{{ storeTypeCost[storeType].text }}</th>
-        <td class="govuk-table__cell">£{{storeTypeCost[storeType].value}}</td>
+        <td class="govuk-table__cell">{{storeTypeCost[storeType].formattedValue}}</td>
         <td class="govuk-table__cell">1</td>
       </tr>
     {% endif %}
@@ -56,7 +56,7 @@
     {% set coverType = data['covertype'] %}
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">{{ coverTypeCost[coverType].text }} </th>
-      <td class="govuk-table__cell">£{{coverTypeCost[coverType].value}}</td>
+      <td class="govuk-table__cell">{{coverTypeCost[coverType].formattedValue}}</td>
       <td class="govuk-table__cell">1</td>
     </tr>
     {% endif %}
@@ -65,7 +65,7 @@
       {% if item in projectItemsCost %}
       <tr class="govuk-table__row"></tr>
         <th scope="row" class="govuk-table__header">{{projectItemsCost[item].text}}</th>
-        <td class="govuk-table__cell">£{{projectItemsCost[item].value}}</td>
+        <td class="govuk-table__cell">{{projectItemsCost[item].formattedValue}}</td>
         <td class="govuk-table__cell">
           <select class="govuk-select" id="sort" name="sort">
             <option value="published">0</option>
