--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -58,7 +58,7 @@ What type of cover will you have?
                 </label>
               </div>
             </div>
-        
+
           </fieldset>
         </div>
 
@@ -79,20 +79,24 @@ What type of cover will you have?
         <h1 class="app-step-nav-related__heading">
           <span class="govuk-heading-m">Your project items</span>
           </h1>
+
+
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Storage</span>
           </h2>
         <nav role="navigation" aria-labelledby="subsection-title">
+
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
             <li>
-              Current storage: {{ data['current-capacity'] }}m<sup>3</sup>
+          Servicible capacity increse: {{ data['current-capacity'] }}m<sup>3</sup>
             </li>
-            <li>
-              Future storage: {{ data['future-capacity'] }}m<sup>3</sup>
-            </li>
+
           </ul>
         </nav>
+
         </div>
+
+        {% if data['storetype'] %}
         <div>
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Store type</span>
@@ -100,13 +104,14 @@ What type of cover will you have?
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
               <li>
-                {{ data['storetype'] }}
+                {% set storeType = data['storetype'] %}
+                {{ storeTypeCost[storeType].text }}
               </li>
-
             </ul>
-
           </nav>
           </div>
+          {% endif %}
+            {% if data['covertype'] %}
           <div>
             <h2 class="app-step-nav-related__heading">
               <span class="app-step-nav-related__pretitle">Cover type</span>
@@ -114,13 +119,15 @@ What type of cover will you have?
             <nav role="navigation" aria-labelledby="subsection-title">
               <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
                 <li>
-                  {{ data['covertype'] }}
+                  {% set coverType = data['covertype'] %}
+                  {{ coverTypeCost[coverType].text }}
                 </li>
 
               </ul>
 
             </nav>
             </div>
+ {% endif %}
             <div>
               <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Cover size</span>
@@ -135,6 +142,7 @@ What type of cover will you have?
 
               </nav>
               </div>
+
 
       </div>
 
