--- a/app/views/slurrystorage/current/project-summary.html
+++ b/app/views/slurrystorage/current/project-summary.html
@@ -18,7 +18,7 @@
     text: "prototype",
     classes: "govuk-tag--pink"
     },
-      html: 'This is not a full service. It is not production code and you might experience problems  .'
+      html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
 <a class="govuk-back-link" href="project-items">Back</a>
 {% endblock %}
@@ -37,7 +37,7 @@
   <caption class="govuk-table__caption govuk-table__caption--m">Breakdown of funding</caption>
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header">Item description</th>
+      <th scope="col" class="govuk-table__header">Item</th>
       <th scope="col" class="govuk-table__header">Grant amount (£)</th>
       <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Quantity</th>
     </tr>
@@ -79,7 +79,7 @@
     {% endfor %}
 
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__footer"> Total requested grant amount</th>
+      <th scope="row" class="govuk-table__footer"> Total grant amount</th>
       <td class="govuk-table__cell"><strong>£14,250</strong></td>
       <td class="govuk-table__cell"></td>
     </tr>
@@ -91,7 +91,7 @@
   <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
   <strong class="govuk-warning-text__text">
     <span class="govuk-warning-text__assistive">Warning</span>
-  Items may cost more than the standardised cost. At full application stage, you can choose between a grant of 50% of the standardised cost of an item or submitting three quotes.
+  If your storage has more than 6 months’ capacity, the grant will only cover up to 6 months.
   </strong>
 </div>
 
