--- a/app/views/slurrystorage/current/store-type.html
+++ b/app/views/slurrystorage/current/store-type.html
@@ -50,7 +50,7 @@ What type of cover will you have?
                 </div>
               {% endfor %}
             </div>
-        
+
           </fieldset>
         </div>
         <p>  <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
@@ -71,11 +71,9 @@ What type of cover will you have?
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
             <li>
-              Current storage: {{ data['current-capacity'] }}m<sup>3</sup>
+              Servicible capacity increse:  {{ data['current-capacity'] }}m<sup>3</sup>
             </li>
-            <li>
-              Future storage: {{ data['future-capacity'] }}m<sup>3</sup>
-            </li>
+            
 
 
           </ul>
