--- a/app/views/slurrystorage/current/current-storage-capacity.html
+++ b/app/views/slurrystorage/current/current-storage-capacity.html
@@ -23,7 +23,7 @@ Current storage capacity
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         {{ govukInput({
           label: {
-            text: "What is your current slurry storage capacity?",
+            text: "How much will your servicable capacity increase by to get you to 6 months?",
             classes: "govuk-label--l",
             isPageHeading: true
           },
