--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-       <form id="mainForm" class="form" action="current-storage-capacity" method="post">
+       <form id="mainForm" class="form" action="store-type" method="post">
 
          <div class="govuk-form-group">
         <h2 class="govuk-heading-l">Standardised costs for eligible items</h2>
