--- a/app/views/slurrystorage/current/project-items.html
+++ b/app/views/slurrystorage/current/project-items.html
@@ -80,41 +80,31 @@ What type of cover will you have?
           <span class="govuk-heading-m">Your project items</span>
           </h1>
 
+          {% if data['storetype'] %}
+          <div>
+            <h2 class="app-step-nav-related__heading">
+              <span class="app-step-nav-related__pretitle">Store</span>
+              </h2>
+            <nav role="navigation" aria-labelledby="subsection-title">
+              <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
+                <li>
+                  {% set storeType = data['storetype'] %}
+                  {{ storeTypeCost[storeType].text }}
+                </li>
+                <li>
+                  Serviceable capacity increase:  {{ data['current-capacity'] }}m<sup>3</sup>
+                </li>
 
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Storage</span>
-          </h2>
-        <nav role="navigation" aria-labelledby="subsection-title">
+              </ul>
+            </nav>
+            </div>
+            {% endif %}
 
-          <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
-            <li>
-          Servicible capacity increse: {{ data['current-capacity'] }}m<sup>3</sup>
-            </li>
 
-          </ul>
-        </nav>
-
-        </div>
-
-        {% if data['storetype'] %}
-        <div>
-          <h2 class="app-step-nav-related__heading">
-            <span class="app-step-nav-related__pretitle">Store type</span>
-            </h2>
-          <nav role="navigation" aria-labelledby="subsection-title">
-            <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
-              <li>
-                {% set storeType = data['storetype'] %}
-                {{ storeTypeCost[storeType].text }}
-              </li>
-            </ul>
-          </nav>
-          </div>
-          {% endif %}
             {% if data['covertype'] %}
           <div>
             <h2 class="app-step-nav-related__heading">
-              <span class="app-step-nav-related__pretitle">Cover type</span>
+              <span class="app-step-nav-related__pretitle">Cover</span>
               </h2>
             <nav role="navigation" aria-labelledby="subsection-title">
               <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
@@ -122,26 +112,21 @@ What type of cover will you have?
                   {% set coverType = data['covertype'] %}
                   {{ coverTypeCost[coverType].text }}
                 </li>
+                <li>
+                  {{ data['cover-size'] }} m<sup>2</sup>
+                </li>
 
               </ul>
 
             </nav>
             </div>
- {% endif %}
-            <div>
-              <h2 class="app-step-nav-related__heading">
-                <span class="app-step-nav-related__pretitle">Cover size</span>
-                </h2>
-              <nav role="navigation" aria-labelledby="subsection-title">
-                <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
-                  <li>
-                    {{ data['cover-size'] }} m<sup>2</sup>
-                  </li>
+        {% endif %}
 
-                </ul>
 
-              </nav>
-              </div>
+
+
+
+      
 
 
       </div>
