--- a/app/views/slurrystorage/current/current-storage-capacity.html
+++ b/app/views/slurrystorage/current/current-storage-capacity.html
@@ -23,7 +23,7 @@ Current storage capacity
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         {{ govukInput({
           label: {
-            html: "How much will your servicable <br>capacity increase by to get you <br>to 6 months?",
+            html: "How much will your serviceable <br>capacity increase by to get you <br>to 6 months?",
             classes: "govuk-label--l",
             isPageHeading: true
           },
