--- a/app/views/slurrystorage/current/standardised-costs.html
+++ b/app/views/slurrystorage/current/standardised-costs.html
@@ -50,7 +50,7 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
@@ -59,7 +59,7 @@
             text: "Above-ground steel tank"
             },
             {
-            html: "22 per m<sup>3</sup>"
+            html: "£22 per m<sup>3</sup>"
             }
           ],
           [
@@ -67,7 +67,7 @@
             text: "Above-ground concrete tank"
             },
             {
-            html: "17 per m<sup>3</sup>"
+            html: "£17 per m<sup>3</sup>"
             }
           ],
           [
@@ -75,7 +75,7 @@
             html: "Below-ground in-situ cast-reinforced<br> concrete tank"
             },
             {
-            html: "15 per m<sup>3</sup>"
+            html: "£15 per m<sup>3</sup>"
             }
           ],
           [
@@ -83,7 +83,7 @@
             text: "Earth-bank lagoon (unlined)"
             },
             {
-            html: "8 per m<sup>3</sup>"
+            html: "£8 per m<sup>3</sup>"
             }
           ],
           [
@@ -91,7 +91,7 @@
             text: "Earth-bank lagoon (lined)"
             },
             {
-            html: "12 per m<sup>3</sup>"
+            html: "£12 per m<sup>3</sup>"
             }
           ],
           [
@@ -99,7 +99,7 @@
             html: "Stores using pre-cast rectangular<br> concrete panels"
             },
             {
-            html: "14 per m<sup>3</sup>"
+            html: "£14 per m<sup>3</sup>"
             }
           ],
           [
@@ -107,7 +107,7 @@
             text: "Large-volume supported slurry bag"
             },
             {
-            html: "20 per m<sup>3</sup>"
+            html: "£20 per m<sup>3</sup>"
             }
           ],
           [
@@ -115,7 +115,7 @@
             text: "Slatted-floor stores"
             },
             {
-            html: "14 per m<sup>3</sup>"
+            html: "£14 per m<sup>3</sup>"
             }
           ]
           ]
@@ -130,7 +130,7 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
@@ -139,7 +139,7 @@
             html: "Rigid covers for above-ground steel<br> or concrete stores"
             },
             {
-            html: "8 per m<sup>2</sup>"
+            html: "£8 per m<sup>2</sup>"
             }
           ],
           [
@@ -147,7 +147,7 @@
             html: "Fixed flexible covers for above-ground<br> steel and concrete stores and <br>earth-bank lagoons"
             },
             {
-            html: "4 per m<sup>2</sup>"
+            html: "£4 per m<sup>2</sup>"
             }
           ],
           [
@@ -155,7 +155,7 @@
             html: "Floating flexible cover for earth-bank<br> lagoons only"
             },
             {
-            html: "3 per m<sup>2</sup>"
+            html: "£3 per m<sup>2</sup>"
             }
           ]
           ]
@@ -170,7 +170,7 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
@@ -179,7 +179,7 @@
             text: "Glass-reinforced plastic (GRP)"
             },
             {
-            html: "25 per m<sup>3</sup>"
+            html: "£25 per m<sup>3</sup>"
             }
           ],
           [
@@ -187,7 +187,7 @@
             text: "Plastic "
             },
             {
-            html: "26 per m<sup>3</sup>"
+            html: "£26 per m<sup>3</sup>"
             }
           ],
           [
@@ -195,7 +195,7 @@
             text: "Pre-cast concrete "
             },
             {
-            html: "27 per m<sup>3</sup>"
+            html: "£27 per m<sup>3</sup>"
             }
           ],
           [
@@ -203,7 +203,7 @@
             text: "In-situ cast concrete"
             },
             {
-            html: "30 per m<sup>3</sup>"
+            html: "£30 per m<sup>3</sup>"
             }
           ]
           ]
@@ -218,7 +218,7 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
@@ -227,7 +227,7 @@
             html: "Electric-powered slurry transfer <br>pump "
             },
             {
-            html: "1,050 per pump"
+            html: "£1,050 per pump"
             }
           ],
           [
@@ -235,7 +235,7 @@
             text: "Centrifugal chopper pump"
             },
             {
-            html: "2,090 per pump"
+            html: "£2,090 per pump"
             }
           ]
           ]
@@ -250,24 +250,24 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
           [
             {
-            html: "Galvanised steel pipework 100mm<br> diameter"
+            html: "Galvanised steel pipework <br>100mm diameter"
             },
             {
-            html: "14 per meter"
+            html: "£14 per meter"
             }
           ],
           [
             {
-            html: "Galvanised steel pipework 100mm<br> diameter"
+            html: "Galvanised steel pipework <br>150mm diameter diameter"
             },
             {
-            html: "24 per meter"
+            html: "£24 per meter"
             }
           ]
           ]
@@ -282,16 +282,16 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
           [
             {
-            html: "Under-floor transfer channels<br>steel pipework 100mm diameter"
+            html: "Under-floor transfer channels"
             },
             {
-            html: "25 per meter"
+            html: "£25 per meter"
             }
           ]
           ]
@@ -306,24 +306,24 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
           [
             {
-            html: "Tank wall mixers with tank capacity<br> up to 1,200 m<sup>3</sup>"
+            html: "Tank wall mixers with tank capacity<br> up to 1,200m<sup>3</sup>"
             },
             {
-            html: "350 per meter"
+            html: "£350 per meter"
             }
           ],
           [
             {
-            html: "Tank wall mixers with tank capacity <br> up to 8,000 m<sup>3</sup>"
+            html: "Tank wall mixers with tank capacity <br> up to 8,000m<sup>3</sup>"
             },
             {
-            html: "1,000 per meter"
+            html: "£1,000 per meter"
             }
           ]
           ]
@@ -338,24 +338,24 @@
             text: "Item"
           },
           {
-            text: "Grant amount (£)"
+            text: "Grant amount"
           }
           ],
           rows: [
           [
             {
-            html: "Inspection platform with ladder for <br>above-ground concrete and steel tanks"
+            html: "Inspection platform with ladder<br> for above-ground concrete and<br> steel tanks"
             },
             {
-            html: "800 per unit"
+            html: "£800 per unit"
             }
           ],
           [
             {
-            html: "Safety fencing for below-ground stores,<br>earth-bank lagoons and slurry bags "
+            html: "Safety fencing for below-ground<br> stores,earth-bank lagoons and<Br> slurry bags "
             },
             {
-            html: "55 per unit"
+            html: "£55 per unit"
             }
           ]
           ]
