--- a/app/views/slurrystorage/current/remaining-costs-fail.html
+++ b/app/views/slurrystorage/current/remaining-costs-fail.html
@@ -26,15 +26,14 @@
       </h1>
 
       <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
-      <p>You also cannot use money from a producer organisation under the Fresh Fruit and Vegetable Aid Scheme.</p>
+
 {{ govukInsetText({
-    html: '<p>You can use:</p>
+    html: '<p>This grant is to:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>loans</li>
       <li>overdrafts</li>
-      <li>the Basic Payment Scheme</li>
-      <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
-    </ul>  
+      <li>the Basic Payment Scheme agri-environment schemes such as the Countryside Stewardship Scheme</li>
+    </ul>
       '
 }) }}
 
