--- a/app/views/slurrystorage/current/grant.html
+++ b/app/views/slurrystorage/current/grant.html
@@ -26,10 +26,10 @@ Potential grant funding
     </h1>
 
     <p class="govuk-body">Based on a grant of 50% of standardised item costs and the store capacity you entered, we estimate you could be eligible for a grant of £142,500.</p>
-          
+
 
     {{ govukWarningText({
-        text: 'Other types of business may be supported in future schemes.',
+        text: 'There’s no guarantee the project will receive a grant.',
         iconFallbackText: 'Warning'
     }) }}
 
