--- a/app/views/slurrystorage/current/answers.html
+++ b/app/views/slurrystorage/current/answers.html
@@ -27,12 +27,69 @@
 <p class="govuk-!-font-size-24">Based on your answers, your project’s score is:</p>
 
     <div class="govuk-inset-text">
-      <h2 class="govuk-heading-m">Average</h2>
-      <p>This means your project might be successful.</p>
+      <h2 class="govuk-heading-m">Not in a priority funding area</h2>
+      <p>This means your project might not be successful</p>
     </div>
-</div>
-  </div>
-  <div class="govuk-grid-column-two-thirds css-index-link-block">
+    <p class="govuk-body">RPA wants to fund projects that are in protected sites. <br><br>
+      Depending on the number of applications received, they may extend the grant to projects outside protected sites. </p>
+
+    <h1 class="govuk-heading-l">Your answers</h1>
+    <table class="govuk-table govuk-body govuk-!-font-size-16">
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header">Answers</th>
+          <th scope="col" class="govuk-table__header">Score</th>
+
+          <th scope="col" class="govuk-table__header">Change</th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Within 1km of air quality protected site
+          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+            {% for item in data['airquality'] %}
+            <li>{{ item | capitalize }}</li>
+            {% endfor %}
+            </ul>
+          </th>
+          <td class="govuk-table__cell">Average</td>
+
+          <td class="govuk-table__cell"><a href="air-quality">Change</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Within 1km of water quality protected site
+            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+            {% for item in data['waterquality'] %}
+            <li>{{ item | capitalize }}</li>
+            {% endfor %}
+            </ul>
+          </th>
+          <td class="govuk-table__cell">Average</td>
+
+          <td class="govuk-table__cell"><a href="water-quality">Change</td>
+        </tr>
+
+        <tr class="govuk-table__row">
+          <th scope="row" class="govuk-table__header">Planning permission
+            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
+            <li>  {{data['planning-permission'] | capitalize}}</li>
+             </ul>
+          </th>
+          <td class="govuk-table__cell">Strong</td>
+
+          <td class="govuk-table__cell"><a href="planning-permission">Change</td>
+        </tr>
+
+      </tbody>
+    </table>
+
+
+
+
+  <div class="css-index-link-block">
 
       <dl class="govuk-body">
       <div class="govuk-summary-list__row">
@@ -59,132 +116,16 @@
               Based on your answers, a grant application is unlikely to be successful. 
           </dd>
           </div>
-</dl>
+  </dl>
+  </div>
+<br><br>
+<div class="govuk-warning-text">
+<span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+<strong class="govuk-warning-text__text">
+<span class="govuk-warning-text__assistive">Warning</span>
+The likelihood of a full application being successful will also depend on the number and value of applications we receive.
+</strong>
 </div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-      <br>
-      <div class="govuk-warning-text">
-  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-  <strong class="govuk-warning-text__text">
-    <span class="govuk-warning-text__assistive">Warning</span>
-    The likelihood of a full application being successful will also depend on the number and value of applications we receive.
-  </strong>
-</div>
-    <p class="govuk-body">Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.</p>
-
-    <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-    <h1 class="govuk-heading-l">Your answers</h1>
-    <p class="govuk-!-padding-bottom-4">You can go back to change scoring questions as many times as you like but you can only submit your details once.</p>
-    <table class="govuk-table govuk-body govuk-!-font-size-16">
-      <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-          <th scope="col" class="govuk-table__header">Answers</th>
-          <th scope="col" class="govuk-table__header">Score</th>
-          <th scope="col" class="govuk-table__header">Funding priorities</th>
-          <th scope="col" class="govuk-table__header">Change</th>
-        </tr>
-      </thead>
-      <tbody class="govuk-table__body">
-
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Produce processed
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9"><li>{{data['products-processed'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Average</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve processing and supply chains</p>
-          </td>
-          <td class="govuk-table__cell"><a href="products-processed">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Adding value
-            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            {% for item in data['adding-value'] %}
-            <li>{{ item | capitalize }}</li>
-            {% endfor %}
-            </ul>
-          </th>
-          <td class="govuk-table__cell">Average</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve processing and supply chains<br><br>
-            Grow your business</p>
-          </td>
-          <td class="govuk-table__cell"><a href="adding-value">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Project impact
-            <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            {% for item in data['project-impact'] %}
-            <li>{{ item | capitalize }}</li>
-            {% endfor %}
-            </ul>
-          </th>
-          <td class="govuk-table__cell">Strong</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve processing and supply chains<br><br>
-            Grow your business</p>
-          </td>
-          <td class="govuk-table__cell"><a href="project-impact">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Future customers
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            {% for item in data['future-customers'] %}
-            <li>{{ item | capitalize }}</li>
-            {% endfor %}
-          </ul>
-        </th>
-          <td class="govuk-table__cell">Strong</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve processing and supply chains<br><br>
-            Grow your business</p>
-          </td>
-          <td class="govuk-table__cell"><a href="future-customers">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Collaboration
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9"><li>{{data['collaboration'] | capitalize}}</li></ul></th>
-          <td class="govuk-table__cell">Strong</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve processing and supply chains<br><br>
-            Encourage collaboration and partnerships</p>
-          </td>
-          <td class="govuk-table__cell"><a href="collaboration">Change</td>
-        </tr>
-
-
-
-        <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Environmental impact
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            {% for item in data['environmental-impact'] %}
-            <li>{{ item | capitalize }}</li>
-            {% endfor %}
-          </ul>
-        </th>
-          <td class="govuk-table__cell">Strong</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve the environment</p>
-          </td>
-          <td class="govuk-table__cell"><a href="environmental-impact">Change</td>
-        </tr>
-
-
-
-      </tbody>
-    </table>
-
 <h2 class="govuk-heading-m">Next steps</h2>
 <p class="govuk-body">Next, add your business and contact details and submit them to the RPA (you should only do this once).</p>
 <p>You’ll get an email with your score and answers, and a reference number.</p>
