--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -26,40 +26,40 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Does the project need planning permission?
+                Does the project have planning permission?
               </h1>
             </legend>
             <br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Not needed" {{ checked("planning-permission", "Not needed") }}>
+                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Approved" {{ checked("planning-permission", "Approved") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission">
-                  Not needed
+                  Approved
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Secured" {{ checked("planning-permission", "Secured") }}>
+                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Applied for but not yet approved" {{ checked("planning-permission", "Applied for but not yet approved") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-2">
-                  Secured
+                  Applied for but not yet approved
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="maybe" {{ checked("planning-permission", "maybe") }}>
+                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="Not yet applied for but expected to be in place by 31 December 2022" {{ checked("planning-permission", "Not yet applied for but expected to be in place by 31 December 2022") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Should be in place by 31 January 2024
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="No" {{ checked("planning-permission", "No") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Will not be in place by 31 January 2024
-                </label>
+                  Not yet applied for but expected to be in place by 31 December 2022</label>
               </div>
             </div>
           </fieldset>
         </div>
 
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+        <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
+
+        {% if data['COMPLETED'] == true %}
+          <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
+            class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Back to score
+          </button>
+        {% endif %}
+      </p>
 
       </form>
     </div>
@@ -67,9 +67,10 @@
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p>You must have applied for planning permission before you submit a full application. <br><br>Any planning permission must be in place by 31 January 2024.
+          <p>RPA wants to fund projects that have planning permission. <br><br>You must have applied for planning permission before you submit a full application.  
+Any planning permission must be in place by 31 December 2022. 
           </p>
           <a href="#">
           </a>
