--- a/app/views/slurrystorage/current/planning-required-condition.html
+++ b/app/views/slurrystorage/current/planning-required-condition.html
@@ -22,10 +22,10 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          You may be able to apply for this grant
+          You may be able to apply for this scheme
         </h1>
 
-        <p>Any planning permission must be in place by 31 January 2024.</p>
+        <p>Any planning permission must be in place by 31 December 2022.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
