--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -32,6 +32,15 @@
           <p class='govuk-list app-list--definition'>
           <a href='slurrystorage/current/standardised-costs' class="govuk-link--no-visited-state">Standardised costs</a><br>
             Mini-journey where we work out the project spec based on standardised costs.</p>
+
+            <p class='govuk-heading-m'>Score results page (A/B testing)</p>
+            <p class='govuk-list app-list--definition'>
+            <span class="govuk-body">Testing to understand which version suits best user needs.</span>
+              <ul class="govuk-list govuk-list--bullet">
+                <li><a class="govuk-link govuk-link--no-visited-state" href="slurrystorage/current/answers" target="new">Option A (opens in new tab)</a></li>
+                <li><a class="govuk-link govuk-link--no-visited-state" href="slurrystorage/current/answers2" target="new">Option B (opens in new tab)</a></li>
+              </ul>
+
       </div>
 
       <div class="proto-admin">
