--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -69,7 +69,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p>RPA wants to fund projects that have planning permission. <br><br>You must have applied for planning permission before you submit a full application.  
+          <p>RPA wants to fund projects that have planning permission. <br><br>You must have applied for planning permission before you submit a full application.  <br><br>
 Any planning permission must be in place by 31 December 2022. 
           </p>
           <a href="#">
