--- a/app/views/slurrystorage/current/answers.html
+++ b/app/views/slurrystorage/current/answers.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 <h1 class="govuk-heading-xl">Score results</h1>
-<p class="govuk-!-font-size-24">Based on your answers, your project’s score is:</p>
+<p class="govuk-!-font-size-24">Based on your answers, your project is:</p>
 
     <div class="govuk-inset-text">
       <h2 class="govuk-heading-m">Not in a priority funding area</h2>
