--- a/app/views/slurrystorage/current/answers2.html
+++ b/app/views/slurrystorage/current/answers2.html
@@ -24,10 +24,10 @@
   <div class="govuk-grid-column-two-thirds">
 
 <h1 class="govuk-heading-xl">Score results</h1>
-<p class="govuk-!-font-size-24">Based on your answers, your project’s score is:</p>
+<p class="govuk-!-font-size-24">Based on your answers, your project is:</p>
 
     <div class="govuk-inset-text">
-      <h2 class="govuk-heading-m">Not in a priority funding area</h2>
+      <h2 class="govuk-heading-m">In a priority funding area</h2>
       <p>This means your project might not be successful</p>
     </div>
     <p class="govuk-body">RPA wants to fund projects that are in protected sites. <br><br>
