--- a/app/views/slurrystorage/current/planning-list.html
+++ b/app/views/slurrystorage/current/planning-list.html
@@ -29,8 +29,9 @@ Planning list
             text: "Planning authority"
           },
           classes: "govuk-input--width-20",
-          id: "width-20",
-          name: "width-20"
+          id: "planning-authority",
+          name: "planning-authority",
+          value: data['planning-authority']
         }) }}
 
         {{ govukInput({
@@ -38,14 +39,16 @@ Planning list
             text: "Planning reference number"
           },
           classes: "govuk-input--width-20",
-          id: "width-20",
-          name: "width-20"
+          id: "planning-refnumber",
+          name: "planning-refnumber",
+          value: data['planning-refnumber']
         }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+        {{ govukButton({
+          text: "Continue"
+        }) }}
       </form>
     </div>
-
    </div>
 
 {% endblock %}
