--- a/app/views/slurrystorage/current/os-grid.html
+++ b/app/views/slurrystorage/current/os-grid.html
@@ -28,20 +28,17 @@ Os grid
             text: "OS grid reference number"
           },
           classes: "govuk-input--width-20",
-          id: "width-20",
-          name: "width-20"
+          id: "os-grid",
+          name: "os-grid",
+          value: data['os-grid']
         }) }}
 
-
-
-
-
-
-
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+        {{ govukButton({
+          text: "Continue"
+        }) }}
       </form>
-    </div>
 
+    </div>
    </div>
 
 {% endblock %}
